--- a/graficis/html.html
+++ b/graficis/html.html
@@ -6,7 +6,7 @@
 	</head>
 
 	<body>
-		<nav class="navbar">
+		<nav class="menu">
 			<ul class="navbar">
 				<li class="button"><a href="#">Home</a></li>
 				<li class="button"><a href="#">News</a></li>
@@ -21,7 +21,7 @@
 					</div>
 				</div>
 			</ul>
-		</nav>
+		</nav>	
 		<h1 class="texto">Color1</h1>
 		</div>
 		<div id="color1">
