--- a/graficis/html.html
+++ b/graficis/html.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<meta name="viewport" content="width=device-width">
 	</head>
 
 	<body>
