--- a/graficis/html.html
+++ b/graficis/html.html
@@ -2,7 +2,6 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<meta name="viewport" content="width=device-width">
 	</head>
 
 	<body>
@@ -13,7 +12,7 @@
 				<li class="button"><a href="#">Contact</a></li>
 				<li class="button"><a href="#">About</a></li>
 				<div class="dropdown">
-					<button class="ddbutton">Dropdown &#9660;</button>
+					<button class="ddbutton">Dropdown</button>
 					<div class="dropdown-content">
 						<a href="#">Link 1</a>
 						<a href="#">Link 2</a>
