Added Arrow Icon

--- a/graficis/html.html
+++ b/graficis/html.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js" integrity="sha384-3LK/3kTpDE/Pkp8gTNp2gR/2gOiwQ6QaO7Td0zV76UFJVhqLl4Vl3KL1We6q6wR9" crossorigin="anonymous"></script>
 	</head>
 
 	<body>
@@ -67,6 +68,7 @@
 				<li class="fbutton"><a href="#">Contact</a></li>
 				<li class="fbutton"><a href="#">About</a></li>
 			</ul>
+			<i class="far fa-arrow-alt-circle-up"></i>
 		</nav>
 	</footer>
 </html>
