--- a/graficis/html.html
+++ b/graficis/html.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
+
+		<!-- CSS -->
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
+
+		<!-- JS-->
 		<script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js" integrity="sha384-3LK/3kTpDE/Pkp8gTNp2gR/2gOiwQ6QaO7Td0zV76UFJVhqLl4Vl3KL1We6q6wR9" crossorigin="anonymous"></script>
 	</head>
 
