--- a/graficis/login.html
+++ b/graficis/login.html
@@ -9,16 +9,14 @@
 	
 	<body>
 		<span id="title">Kevin | Login</span>
-		<div class="flex">
-			<form>
-				<p>Insert Username:</p>
-				<input type="text" name="user" placeholder="Username" required class="eflex">
-				<br>
-				<p>Insert password:</p>
-				<input type="password" name="pass" placeholder="Password" required class="eflex">
-				<br><br>
-				<button>Submit</button>
-			</form>
-		</div>
+			<div class="flex">
+				<form class="form">
+					<input type="text" name="user" placeholder="Username" required class="eflex" class="eflex">
+					<input type="password" name="pass" placeholder="Password" required class="eflex">
+					<br><br>
+					<button class="button">Login!</button>
+					<br><br>
+				</form>
+			</div>
 	</body>
 </html>
