--- a/graficis/html.html
+++ b/graficis/html.html
@@ -25,6 +25,8 @@
 						<a href="#">Link 3</a>
 					</div>
 				</div>
+				<li class="button rbutton"><a href="login" style="margin-right: 2vh">Login</a></li>
+				<li class="button rbutton"><a href="register">Register</a></li>
 			</ul>
 		</nav>	
 		<h1 class="texto">Color1</h1>
@@ -65,15 +67,13 @@
 		</div>
 	</body>
 
-	<footer>
-		<nav class="menufooter">
-			<ul class="footer">
-				<li class="fbutton"><a href="#">Home</a></li>
-				<li class="fbutton"><a href="#">News</a></li>
-				<li class="fbutton"><a href="#">Contact</a></li>
-				<li class="fbutton"><a href="#">About</a></li>
-			</ul>
-			<i class="far fa-arrow-alt-circle-up"></i>
-		</nav>
+	<footer class="footer">
+		<ul class="footer">
+			<li class="fbutton"><a href="#">Home</a></li>
+			<li class="fbutton"><a href="#">News</a></li>
+			<li class="fbutton"><a href="#">Contact</a></li>
+			<li class="fbutton"><a href="#">About</a></li>
+		</ul>
+		<i class="far fa-arrow-alt-circle-up"></i>
 	</footer>
 </html>
