--- a/graficis/EnryBartoK/layout.html
+++ b/graficis/EnryBartoK/layout.html
@@ -4,7 +4,7 @@
 		<title>Kevin | {% block title %}{% endblock %}</title>
 
 		<!--  STYLE  -->
-		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/layout.css') }}">
+		<link rel="stylesheet" type="text/css" href="layout.css">
 		<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 		{% block css %}{% endblock %}
@@ -21,7 +21,7 @@
 		
 		<!--  JS  --> 
 		<script src="https://kit.fontawesome.com/2e6be9a3fe.js" crossorigin="anonymous"></script>
-		<script src="{{ url_for('static', filename='js/up.js') }}"></script>
+		<script src="up.js"></script>
 		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
@@ -59,17 +59,17 @@
 							<a href="#" class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fab fa-rocketchat"></i> AMA/Just Chatting</button>
 						</li>
 						<li class="navbar-nav">
-							<button class="btn bg-primary dropdown" type="button">
-							<a class="text-white dropdown-toggle text-decoration-none" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-list"></i> Dropdown</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<a class="dropdown-item" href="#">Action</a>
-							<a class="dropdown-item" href="#">Another action</a>
-							<div class="dropdown-divider"></div>
-							<a class="dropdown-item" href="#">Something else here</a>
-						</div>
-						</button>
+							<button class="btn bg-primary dropdown" type="button"><a class="text-white dropdown-toggle  text-decoration-none" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-list"></i> Dropdown</a>
+								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+									<a class="dropdown-item" href="#">Action</a>
+									<a class="dropdown-item" href="#">Another action</a>
+									<div class="dropdown-divider"></div>
+									<a class="dropdown-item" href="#">Something else here</a>
+								</div>
+							</button>
+						</li>
 						<div id="not_logged_buttons">
-							<li class="navbar-nav">
+							<br><br><br><li class="navbar-nav">
 								<a href="../register" class="text-decoration-none"><button class="btn bg-primary text-white bright" type="button"><i class="fas fa-user-plus"></i> Register</button></a>
 							</li>
 							<li class="navbar-nav">
@@ -78,7 +78,7 @@
 						</div>
 						<div id="logged_buttons">
 							<li class="navbar-nav">
-								<a href="../create_post" class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fas fa-plus-square"></i> Crea Post</button></a>
+								<a href="../create_post" class="text-decoration-none"><button class="btn bg-primary text-white bright" type="button"><i class="fas fa-plus-square"></i> Crea Post</button></a>
 							</li>
 							<li class="navbar-nav">
 								<a href="../logout" class="text-decoration-none"><button class="btn bg-primary text-white bright" type="button"><i class="fas fa-sign-out-alt"></i> Logout</button></a>
