--- a/graficis/EnryBartoK/layout.html
+++ b/graficis/EnryBartoK/layout.html
@@ -31,6 +31,8 @@
 
 	<body>
 		{% if (nav | default("there", false)) %}
+
+			<!--  NAVBAR  --> 
 			<nav class="navbar navbar-expand-xl navbar-dark bg-primary">
  				<button class="navbar-toggler" data-toggle="collapse" data-target="#collapse-target">
 					<span class="navbar-toggler-icon"></span>
